# ane

./: .gitignore  CMakeLists.txt  Makefile  README.md
ane/: Makefile
driver/: Makefile  live.dts
driver/src/: ane.h  ane_drv.c  ane_h13.c  ane_h13.h  ane_h14.c  ane_h14.h
driver/src/uapi/drm/: ane_accel.h
src/libane/: ane.c  ane.h  bitfield.h  hwx.c  hwx.h  integer.h  td_v11.h  td_v5.h  td_v7.h
tests/: CMakeLists.txt
tests/matmul/: matmul_h11.hwx  matmul_h12.hwx  matmul_h13.hwx  matmul_h15.hwx  matmul_m10.hwx  matmul_t0.hwx  test_matmul.cpp
tools/ane-disasm/: CMakeLists.txt  Makefile  dump.cpp  dump.h  dump_td_v11.cpp  dump_td_v11.h  dump_td_v5.cpp  dump_td_v5.h  main.cpp
wip/: hwxinfo.py  matmul_h14.hwx
